# codeprysm

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: integration-nightly.yml  release.yml  rust.yml
crates/codeprysm-backend/: Cargo.toml  README.md
crates/codeprysm-backend/src/: error.rs  lib.rs  local.rs  multi.rs  registry.rs  remote.rs  traits.rs  types.rs
crates/codeprysm-cli/: Cargo.toml  README.md
crates/codeprysm-cli/src/: main.rs  progress.rs
crates/codeprysm-cli/src/commands/: backend.rs  clean.rs  components.rs  config.rs  doctor.rs  graph.rs  init.rs  mcp.rs  mod.rs  search.rs  status.rs  update.rs  workspace.rs
crates/codeprysm-cli/tests/: cli_parsing.rs  integration.rs
crates/codeprysm-config/: Cargo.toml  README.md
crates/codeprysm-config/src/: error.rs  lib.rs  loader.rs
crates/codeprysm-core/: Cargo.toml  README.md
crates/codeprysm-core/queries/: c-tags.scm  cmake-manifest-tags.scm  cpp-tags.scm  csharp-tags.scm  go-tags.scm  gomod-manifest-tags.scm  javascript-tags.scm  json-manifest-tags.scm  python-tags.scm  rust-tags.scm  toml-manifest-tags.scm  typescript-tags.scm  xml-manifest-tags.scm
crates/codeprysm-core/queries/overlays/: c-test.scm  cpp-test.scm  csharp-test.scm  go-test.scm  javascript-test.scm  python-test.scm  rust-test.scm  typescript-test.scm
crates/codeprysm-core/src/: builder.rs  discovery.rs  embedded_queries.rs  graph.rs  incremental.rs  lib.rs  main.rs  manifest.rs  merkle.rs  parser.rs  tags.rs
crates/codeprysm-core/src/lazy/: cache.rs  cross_refs.rs  manager.rs  mod.rs  partition.rs  partitioner.rs  schema.rs
crates/codeprysm-core/tests/: codeprysmignore.rs  component_integration_test.rs  component_schema_test.rs  edge_cases.rs  equivalence.rs  graph_completeness.rs  integration.rs  lazy_integration.rs  partition_lifecycle.rs  real_repo_partition_test.rs  realworld_tests.rs
crates/codeprysm-core/tests/common/: graph_validator.rs  mod.rs  test_repos.rs
crates/codeprysm-core/tests/fixtures/component_repos/dotnet-solution/Api/: ApiService.cs  MyApp.Api.csproj
crates/codeprysm-core/tests/fixtures/component_repos/dotnet-solution/Shared/: MyApp.Shared.csproj  SharedLib.cs
crates/codeprysm-core/tests/fixtures/component_repos/dotnet-solution/Web/: MyApp.Web.csproj  WebController.cs
crates/codeprysm-core/tests/fixtures/component_repos/go-workspace/api/: api.go  go.mod
crates/codeprysm-core/tests/fixtures/component_repos/go-workspace/cmd/: go.mod  main.go
crates/codeprysm-core/tests/fixtures/component_repos/go-workspace/shared/: go.mod  shared.go
crates/codeprysm-core/tests/fixtures/component_repos/npm-workspace/: package.json
crates/codeprysm-core/tests/fixtures/component_repos/python-monorepo/api/: pyproject.toml
crates/codeprysm-core/tests/fixtures/component_repos/python-monorepo/api/myapp_api/: __init__.py
crates/codeprysm-core/tests/fixtures/component_repos/python-monorepo/cli/: pyproject.toml
crates/codeprysm-core/tests/fixtures/component_repos/python-monorepo/cli/myapp_cli/: __init__.py
crates/codeprysm-core/tests/fixtures/component_repos/python-monorepo/shared/: pyproject.toml
crates/codeprysm-core/tests/fixtures/component_repos/rust-workspace/crates/cli/: Cargo.toml
crates/codeprysm-core/tests/fixtures/component_repos/rust-workspace/crates/cli/src/: main.rs
crates/codeprysm-core/tests/fixtures/component_repos/rust-workspace/crates/core/: Cargo.toml
crates/codeprysm-core/tests/fixtures/component_repos/rust-workspace/crates/core/src/: lib.rs
crates/codeprysm-core/tests/fixtures/component_repos/rust-workspace/crates/utils/: Cargo.toml
crates/codeprysm-core/tests/fixtures/component_repos/rust-workspace/crates/utils/src/: lib.rs
crates/codeprysm-core/tests/fixtures/expected_results/: c.yaml  cpp.yaml  csharp.yaml  go.yaml  javascript.yaml  python.yaml  rust.yaml  typescript.yaml
crates/codeprysm-core/tests/fixtures/integration_repos/c/: sample.c
crates/codeprysm-core/tests/fixtures/integration_repos/cpp/: sample.cpp
crates/codeprysm-core/tests/fixtures/integration_repos/csharp/: sample.cs
crates/codeprysm-core/tests/fixtures/integration_repos/go/: sample.go
crates/codeprysm-core/tests/fixtures/integration_repos/javascript/: sample.js
crates/codeprysm-core/tests/fixtures/integration_repos/python/: sample.py
crates/codeprysm-core/tests/fixtures/integration_repos/rust/: sample.rs
crates/codeprysm-core/tests/fixtures/integration_repos/typescript/: sample.ts
crates/codeprysm-core/tests/fixtures/sample_repo/: lib.rs  main.py  utils.ts
crates/codeprysm-mcp/: Cargo.toml  README.md
crates/codeprysm-mcp/src/: error.rs  lib.rs  server.rs  tools.rs
crates/codeprysm-mcp/tests/: e2e_integration.rs  error_handling.rs  integration.rs
crates/codeprysm-mcp/tests/common/: mod.rs
crates/codeprysm-search/: Cargo.toml  README.md
crates/codeprysm-search/examples/: benchmark_embedding.rs  check_device.rs
crates/codeprysm-search/src/: client.rs  embeddings_legacy.rs  error.rs  hybrid.rs  indexer.rs  lib.rs  main.rs  schema.rs  semantic_text.rs
crates/codeprysm-search/src/embeddings/: azure_ml.rs  factory.rs  jina_bert_v2.rs  local.rs  mod.rs  openai.rs  provider.rs
crates/codeprysm-search/tests/: azure_ml_integration.rs  embedding_parity.rs  integration.rs  openai_integration.rs  search_quality.rs
crates/codeprysm-search/tests/common/: mod.rs
docker/: Dockerfile  README.md
docs/: getting-started-docker.md  getting-started.md
docs/development/: scm-tag-naming-convention.md
docs/guides/: scm-overlays.md
tests/fixtures/: README.md  search_test_config.yaml  search_tests_azsm.yaml  search_tests_gemini_cli.yaml  search_tests_helm.yaml  search_tests_python_sdk.yaml
tests/fixtures/c_cpp_repo/: README.md  graph_v2.json  main.cpp
tests/fixtures/csharp_repo/: Program.cs  README.md  graph_v2.json  search_tests.yaml
tests/fixtures/javascript_repo/: README.md  (+5 more)
(+14 files in other folders)
