# CodePrism - Rust Implementation
# High-performance code graph generation and semantic search

[workspace]
resolver = "2"
members = [
    "crates/codeprysm-core",
    "crates/codeprysm-search",
    "crates/codeprysm-mcp",
    "crates/codeprysm-config",
    "crates/codeprysm-backend",
    "crates/codeprysm-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/codeprysm/codeprysm"
homepage = "https://github.com/codeprysm/codeprysm"
rust-version = "1.85"

[workspace.dependencies]
# AST Parsing
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"

# Manifest parsing (validated in dev/smoke-tests/manifest-parsing)
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-gomod-orchard = "0.5"
tree-sitter-xml = "0.7"
tree-sitter-cmake = "0.7"

# Graph
petgraph = "0.8"

# SQLite (lazy loading)
rusqlite = { version = "0.32", features = ["bundled"] }

# Caching
lru = "0.12"

# Vector DB
qdrant-client = "1.13"

# Embeddings (Candle ecosystem)
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = "0.4"
tokenizers = "0.20"

# MCP - Official Anthropic SDK
rmcp = { version = "0.11", features = ["server", "macros", "transport-io"] }

# JSON Schema
schemars = "0.8"

# Async
tokio = { version = "1", features = ["full"] }
rayon = "1.10"
async-trait = "0.1"

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Rate limiting
governor = "0.8"

# Hashing
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.17"

# File walking
walkdir = "2.5"
ignore = "0.4"

# Regex
regex = "1.11"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Concurrency
once_cell = "1.20"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
codeprysm-core = { version = "0.1.0", path = "crates/codeprysm-core" }
codeprysm-search = { version = "0.1.0", path = "crates/codeprysm-search" }
codeprysm-mcp = { version = "0.1.0", path = "crates/codeprysm-mcp" }
codeprysm-config = { version = "0.1.0", path = "crates/codeprysm-config" }
codeprysm-backend = { version = "0.1.0", path = "crates/codeprysm-backend" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
# Faster dev builds
opt-level = 0
debug = true
